--- a/trunk/static_html/504.html
+++ b/trunk/static_html/504.html
@@ -3,8 +3,8 @@
     <head>
         <title>Kejian.TV</title>
         <meta charset="UTF-8">
-        <meta name="keywords" content="Kejian.TV,职场问答,职场规划,求职,职场疑惑,跨专业,简历制作,HR答疑" />
-        <meta name="description" content="Kejian.TV,职场问答,职场规划,求职,职场疑惑,跨专业,简历制作,HR答疑" />
+        <meta name="keywords" content="Kejian.TV,师生问答,师生规划,解题,师生疑惑,跨专业,简历制作,HR答疑" />
+        <meta name="description" content="Kejian.TV,师生问答,师生规划,解题,师生疑惑,跨专业,简历制作,HR答疑" />
         <link rel="shortcut icon" href="/favicon.ico?v=003" />
 		<!--[if lt IE 9 ]>
         <script src="js/html5.js"></script>
@@ -23,7 +23,7 @@
             <section class="wrapper">
                 <a class="sitelogo" title="Kejian.TV首页" href="/"></a>
                 <div class="searchbox">
-                    <input id="searchInput" placeholder="搜索求职、职场疑问">
+                    <input id="searchInput" placeholder="搜索解题、课程疑问">
                 </div>
                 <button class="btnGoAsk"></button>
                 <div class="userHomepage"><a href="/" title="回到首页">首页</a></div>
