--- a/trunk/static_html/index.html
+++ b/trunk/static_html/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>Kejian.TV</title>
         <meta charset="UTF-8">
-        <meta name="keywords" content="Kejian.TV,职场问答,职场规划,求职,职场疑惑,跨专业,简历制作,HR答疑" />
-        <meta name="description" content="Kejian.TV,职场问答,职场规划,求职,职场疑惑,跨专业,简历制作,HR答疑" />
+        <meta name="keywords" content="Kejian.TV,师生问答,师生规划,解题,师生疑惑,跨专业,简历制作,HR答疑" />
+        <meta name="description" content="Kejian.TV,师生问答,师生规划,解题,师生疑惑,跨专业,简历制作,HR答疑" />
         <link rel="shortcut icon" href="/favicon.ico?v=003" />
 		<!--[if lt IE 9 ]>
         <script src="js/html5.js"></script>
@@ -22,7 +22,7 @@
             <section class="wrapper">
                 <a class="sitelogo" title="Kejian.TV首页" href="/"></a>
                 <div class="searchbox">
-                    <input id="searchInput" placeholder="搜索求职、职场疑问">
+                    <input id="searchInput" placeholder="搜索解题、课程疑问">
                 </div>
                 <button class="btnGoAsk"></button>
                 <div class="userHomepage"><a href="/" title="回到首页">首页</a></div>
@@ -66,7 +66,7 @@
 					<!-- 主题内容头 --> 
 					<header class="mainContentHeader">
 						<section>
-							<em>苏门答腊</em> Kejian.TV-职场互动问答平台<br />
+							<em>苏门答腊</em> 首都师范大学 - 师生互动问答平台<br />
 							<span class="fc999">关注你感兴趣的内容，开始Kejian.TV吧！</span>
 						</section>
 						<div class="dline mt10"></div>
@@ -355,7 +355,7 @@
                         <li><span class="recommended"></span><a href="">或许能回答</a></li>
                         <li><span class="asks"></span><a href="">所有问题</a></li>
                         <li><span class="doing"></span><a href="">Kejian.TV正在发生</a></li>
-                        <li><span class="newbie"></span><a href="">Kejian.TV广场</a></li>
+                        <li><span class="newbie"></span><a href="">问答广场</a></li>
                     </ul>
 					<div class="block40"></div>
                 </nav>
