--- a/trunk/static_html/index.html
+++ b/trunk/static_html/index.html
@@ -66,7 +66,7 @@
 					<!-- 主题内容头 --> 
 					<header class="mainContentHeader">
 						<section>
-							<em>苏门答腊</em> 首都师范大学 - 师生互动问答平台<br />
+							<em>苏门答腊</em> Kejian.TV - 师生互动问答平台<br />
 							<span class="fc999">关注你感兴趣的内容，开始Kejian.TV吧！</span>
 						</section>
 						<div class="dline mt10"></div>
