--- a/trunk/public/maintenance.html
+++ b/trunk/public/maintenance.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>Kejian.TV课件交流系统</title>
 <style>
 body { font-family: Tahoma, Verdana, Arial, sans-serif; }
@@ -10,7 +12,7 @@ body { font-family: Tahoma, Verdana, Arial, sans-serif; }
 <tr>
 <td align="center" valign="middle">
   对不起，Kejian.TV课件交流系统正在进行升级维护.<br/>
-  请稍后再试.
+  请稍后访问.
 </td>
 </tr>
 </table>
