--- a/trunk/public/404.html
+++ b/trunk/public/404.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>Kejian.TV课件交流系统</title>
 <style>
 body { font-family: Tahoma, Verdana, Arial, sans-serif; }
