--- a/trunk/public/maintenance.html
+++ b/trunk/public/maintenance.html
@@ -12,7 +12,7 @@ body { font-family: Tahoma, Verdana, Arial, sans-serif; }
 <tr>
 <td align="center" valign="middle">
   对不起，Kejian.TV课件交流系统正在进行升级维护.<br/>
-  请稍后访问.
+  请稍后访问或<a href="/">立即重试</a>.
 </td>
 </tr>
 </table>
