个性域名->用户名，301->302，开始调试PHP->KTV

--- a/trunk/static_html/profile.html
+++ b/trunk/static_html/profile.html
@@ -94,7 +94,7 @@
 						<dl>
 							<dt>昵称</dt>
 							<dd><input type="text" require /> <mark class="fc999">一个月只可以修改一次，最多X个汉字<img src="img/transparent.png" class="questionLogo" title="这里是绿色问号的提示文本" /></mark></dd>
-							<dt>个性域名：<span class="fc999">http://kejian.tv/</span></dt>
+							<dt>用户名：<span class="fc999">http://kejian.tv/</span></dt>
 							<dd>http://kejian.tv/<input type="text" /></dd>
 							<dt>修改头像：</dt>
 							<dd><img src="img/tmp/head98.png" class="imgHead" /><br />
