--- a/sub/public/500.html
+++ b/sub/public/500.html
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<title>Kejian.TV课件交流系统</title>
+<style>
+body { font-family: Tahoma, Verdana, Arial, sans-serif; }
+</style>
 </head>
-
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-  </div>
+<body bgcolor="white" text="black">
+<table width="100%" height="100%">
+<tr>
+<td align="center" valign="middle">
+  对不起，您访问的页面出现了一点技术问题.<br/>
+  我们已经记录了这个错误，并定将尽快修复. <a href="http://kejian.tv/">返回首页</a>.
+</td>
+</tr>
+</table>
 </body>
 </html>
